--- a/stock/en-tete_v5.tex
+++ b/stock/en-tete_v5.tex
@@ -76,8 +76,8 @@
     innerrightmargin=2.5em,
     innertopmargin=5pt,
     innerbottommargin=5pt,
-    skipabove=\topsep,
-    skipbelow=\topsep,
+    skipabove=-0.5cm,
+    skipbelow=-0.25cm,
 ]{boite_definition}
 
 \newcounter{boite}
@@ -105,7 +105,6 @@
 }
 {
     \end{boite_definition}
-    \vspace{10pt}
 }
 
 \newmdenv[
@@ -121,8 +120,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_exemple}
 
 
@@ -149,7 +148,6 @@
 }
 {
     \end{boite_exemple}
-    \vspace{10pt}
 }
 
 \newmdenv[
@@ -165,8 +163,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_proposition}
 
 \newenvironment{proposition}[2]
@@ -207,8 +205,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_theoreme}
 
 
@@ -251,8 +249,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_demonstration}
 
 
@@ -281,8 +279,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_remarque}
 
 
@@ -324,8 +322,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_implementation}
 
 
@@ -494,8 +492,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_question}
 
 
@@ -537,8 +535,8 @@
   innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
-  skipabove=\topsep,
-  skipbelow=\topsep,
+  skipabove=-0.5cm,
+  skipbelow=-0.25cm,
 ]{boite_corollaire}
 
 
